# geekflare-api-python

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  openapi.json  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: ApiToolApi.md  BaseErrorResponseDto.md  BrokenLinkDto.md  BrokenLinkMetaDto.md  BrokenLinkResponseDto.md  BrokenLinkSummaryDto.md  DefaultExtractionFieldDto.md  DnsMetaDto.md  DnsRecordDto.md  DnsRecordResponseDto.md  DnsSecDataDto.md  DnsSecDto.md  DnsSecMetaDto.md  DnsSecResponseDto.md  ExtractionSchemaDto.md  ExtractionSchemaDtoFieldsInner.md  GroundedAnswerDataDto.md  GroundedAnswerResponseDto.md  GroundedSourceDto.md  HealthResponseDto.md  ImageSearchResponseDto.md  ImageSearchResultItemDto.md  LighthouseDto.md  LighthouseMetaDto.md  LighthouseResponseDto.md  LoadTimeDataDto.md  LoadTimeDto.md  LoadTimeMetaDto.md  LoadTimeResponseDto.md  MarginDto.md  MetaScrapeDto.md  MetaScrapeMetaDto.md  MetaScrapeResponseDto.md  MetaScrapeResponseDtoData.md  MixedContentDataDto.md  MixedContentDto.md  MixedContentMetaDto.md  MixedContentResponseDto.md  MixedContentResponseDtoData.md  MtrDataDto.md  (+49 more)
geekflare_api/: __init__.py  api_client.py  client.py  configuration.py  exceptions.py  rest.py
test/: test_api_tool_api.py  test_base_error_response_dto.py  test_broken_link_dto.py  test_broken_link_meta_dto.py  test_broken_link_response_dto.py  test_broken_link_summary_dto.py  test_default_extraction_field_dto.py  test_dns_meta_dto.py  test_dns_record_dto.py  test_dns_record_response_dto.py  test_dns_sec_data_dto.py  test_dns_sec_dto.py  (+77 more)
(+92 files in other folders)
